k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
  namespace: url-shortener
spec:
  selector:
    app: url-shortener
  ports:
    - name: http
      port: 80
      targetPort: 8000
