k8s/pgbouncer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer
  namespace: url-shortener
spec:
  selector:
    app: pgbouncer
  ports:
    - name: pgbouncer
      port: 5432
      targetPort: 5432
